--- a/java-custom-rules/pom.xml
+++ b/java-custom-rules/pom.xml
@@ -18,6 +18,8 @@
 
         <sonar.version>7.7</sonar.version>
         <sonarjava.version>5.11.0.17289</sonarjava.version>
+        <sonar.maven.plugin.version>3.6.0.1398</sonar.maven.plugin.version>
+        <sonar.analyzer.commons.version>1.10.2.456</sonar.analyzer.commons.version>
     </properties>
 
     <dependencies>
@@ -25,6 +27,13 @@
             <groupId>org.sonarsource.sonarqube</groupId>
             <artifactId>sonar-plugin-api</artifactId>
             <version>${sonar.version}</version>
+            <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.sonarsource.analyzer-commons</groupId>
+            <artifactId>sonar-analyzer-commons</artifactId>
+            <version>${sonar.analyzer.commons.version}</version>
         </dependency>
 
         <dependency>
@@ -41,9 +50,14 @@
         </dependency>
 
         <dependency>
+            <groupId>org.sonarsource.scanner.maven</groupId>
+            <artifactId>sonar-maven-plugin</artifactId>
+            <version>${sonar.maven.plugin.version}</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.sonarsource.java</groupId>
             <artifactId>sonar-java-plugin</artifactId>
-            <type>sonar-plugin</type>
             <version>${sonarjava.version}</version>
             <scope>provided</scope>
         </dependency>
@@ -120,23 +134,21 @@
             <version>4.11</version>
             <scope>test</scope>
         </dependency>
+
         <dependency>
             <groupId>org.assertj</groupId>
             <artifactId>assertj-core</artifactId>
             <version>3.6.1</version>
             <scope>test</scope>
         </dependency>
+
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
             <version>0.9.30</version>
             <scope>test</scope>
         </dependency>
-        <dependency>
-            <groupId>org.sonarsource.scanner.maven</groupId>
-            <artifactId>sonar-maven-plugin</artifactId>
-            <version>3.6.0.1398</version>
-        </dependency>
+
     </dependencies>
 
     <build>
@@ -151,7 +163,7 @@
                     <pluginName>Java Custom Rules</pluginName>
                     <pluginClass>org.sonar.template.java.CodeReviewTeamJavaRulesPlugin</pluginClass>
                     <sonarLintSupported>true</sonarLintSupported>
-                    <sonarQubeMinVersion>7.7</sonarQubeMinVersion>
+                    <sonarQubeMinVersion>7.5</sonarQubeMinVersion>
                 </configuration>
             </plugin>
 
